webpage link corrected

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -57,7 +57,7 @@
 \begin{center}
 {	\huge \textsf{Giridhar \textbf{Kulkarni}}
 } \\[1ex]
-\href{https://codegiri.github.io/cv/index.html}{\textcolor{gray}{https://codegiri.github.io/cv/index.html}}
+\href{https://codegiri.github.io/webpage}{\textcolor{gray}{https://codegiri.github.io/webpage}}
 \\
 \textcolor{gray}{\scriptsize%
 \begin{tabular}{c|c|c}
@@ -102,7 +102,7 @@
 \end{minipage}
 \begin{minipage}{.24\textwidth}
 	\raggedleft
-	\fbox{\includegraphics*[height=4.5cm]{photo.png}}
+	\fbox{\includegraphics[height=4.5cm]{photo.png}}
 \end{minipage}
 %
 \\[1em]
