--- a/RS/RS.tex
+++ b/RS/RS.tex
@@ -45,7 +45,8 @@ Spin chains have also been realised in the laboratory, hence opening the doors t
 Precisely for all these reasons, the integrable quantum spin chains are not just toy models in mathematical physics but they also bring around highly sophisticated mathematical techniques to solve physical problems and as a result, they find numerous theoretical and empirical applications from the string theory to the condensed matter physics.
 Hence I am motivated by and have a strong but not limiting predilection towards the integrable quantum spin chains.
 \par
-My recent work was focused on computation of form-factors of quantum spin chains. Form-factors offer a powerful and effecient tool to study the dynamical two-point correlations and their long distance behviour.
+Form-factors offer a powerful and effecient tool to study the dynamical two-point correlations and their long distance behviour.
+My recent work was focused on computation of form-factors of quantum spin chains, that has put a small but important step forward in the direction of exact compution of form-factors in the algebraic Bethe ansatz framework. 
 \addsec{Past work}
 There are two maintream approaches to the exact computation of correlation functions and form-factors in quantum spin chains. Although both of these uses the same hidden algebraic structure of integrability, they do so in two completely different ways.
 While the q-vertex operator algebras makes use of the affine yangian symmetry of the quantum spin chains directly in the infinite volume limit, the algebraic Bethe ansatz also works for finite-size chains.
