--- a/cv/mypub.bib
+++ b/cv/mypub.bib
@@ -1,10 +1,29 @@
 
 @article{KitK19,
-	title = {Thermodynamic limit of the two-spinon form factors for the zero field {XXX} chain},
-	volume = {6},
-	doi = {10.21468/scipostphys.6.6.076},
-	number = {076},
-	journaltitle = {{SciPost} Physics},
-	author = {Kitanine, Nikolai and Kulkarni, Giridhar},
-	date = {2019-06-25},
+  title = {Thermodynamic Limit of the Two-Spinon Form Factors for the Zero Field {{XXX}} Chain},
+  author = {Kitanine, Nikolai and Kulkarni, Giridhar},
+  date = {2019-06-25},
+  journaltitle = {SciPost Physics},
+  volume = {6},
+  pages = {076},
+  doi = {10.21468/scipostphys.6.6.076},
+  annotation = {Short DOI: 10/c72p},
+  keywords = {ABA,form factors,two-spinon,xxx chain},
+  number = {6}
 }
+
+@thesis{Kul20,
+  title = {Asymptotic analysis of the form-factors of quantum spin chains},
+  author = {Kulkarni, Giridhar V.},
+  date = {2020-12-03},
+  location = {{U. Bourgogne, Dijon}},
+  archivePrefix = {arXiv},
+  eprint = {2012.02367},
+  eprinttype = {arxiv},
+  keywords = {Condensed Matter - Statistical Mechanics,High Energy Physics - Theory,Mathematical Physics,Nonlinear Sciences - Exactly Solvable and Integrable Systems},
+  langid = {english, french},
+  pagetotal = {228},
+  type = {PhD thesis}
+}
+
+
